# g2vpp

./: .gitignore  CMakeLists.txt
glad/: glad.c  glad.h
include/: g2v.hpp  g2v_cvffmpeg.hpp
src/: g2v.cpp  g2v_cvffmpeg.cpp
test/: CMakeLists.txt  main.cpp
